moderate fix of pages alignment and style

--- a/static/css/styles/authorisation.css
+++ b/static/css/styles/authorisation.css
@@ -1,5 +1,4 @@
 html {
-    background-image: url(../../images/background.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -30,7 +29,6 @@ html {
     top: 7px;
 
     font-family: 'Crimson Text', serif !important;
-    font-weight: 400px;
     font-size: 15px;
     line-height: 20px;
 
@@ -42,20 +40,9 @@ html {
 
 .example {
     position: absolute;
-    width: 233px;
-    height: 75px;
-    left: 808px;
-    top: 288px;
+    display: flex;
+    justify-content: center;
 
-    margin-left: 130px;
-    margin-top: 60px;
-    font-family: 'Crimson Text', serif !important;
-    font-weight: 400px;
-    font-size: 14px;
-    line-height: 58px;
-    letter-spacing: 0.07em;
-
-    color: #000000;
 }
 
 .mail {
